# ttsleaguebot

./: LICENSE  README.md  pyproject.toml
src/ttsleaguebot/: main.py
